tests/baselines/reference/parserAccessors10.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts(2,10): error TS1005: ':' expected.
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts(2,10): error TS2304: Cannot find name 'get'.
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts(2,14): error TS1005: ',' expected.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts (3 errors) ====
    var v = {
      public get foo() { }
             ~~~
!!! error TS1005: ':' expected.
             ~~~
!!! error TS2304: Cannot find name 'get'.
                 ~~~
!!! error TS1005: ',' expected.
    };